<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.AddPetActivity"
    tools:showIn="@layout/activity_add_pet">

    <com.androidnetworking.widget.ANImageView
        android:id="@+id/photoANImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"
        android:src="@mipmap/ic_launcher"
        android:elevation="6dp" />

    <android.support.design.button.MaterialButton
        android:id="@+id/galeryButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="@id/photoANImageView"
        app:layout_constraintStart_toEndOf="@id/photoANImageView"
        app:layout_constraintBottom_toBottomOf="@id/photoANImageView"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/galeryButton"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:onClick="galeryClick"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photoANImageView"
        android:textColorHint="@color/colorAccent"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:errorTextAppearance="@style/TextAppearance.Design.Error"
        app:counterOverflowTextAppearance="@style/TextAppearance.Design.Error" >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/nameTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="textCapSentences" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/breedTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTextInputLayout"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:errorTextAppearance="@style/TextAppearance.Design.Error"
        app:counterOverflowTextAppearance="@style/TextAppearance.Design.Error" >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/descriptionTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/breed_hint"
            android:inputType="textCapSentences" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/date_hint"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/dateEditText"
        app:layout_constraintBottom_toBottomOf="@id/dateEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/dateEditText"
        android:inputType="date"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        app:layout_constraintStart_toEndOf="@id/dateTextView"
        app:layout_constraintTop_toBottomOf="@id/breedTextInputLayout"
        android:textSize="18sp"
        android:hint="@string/date_format_hint"  />

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="18sp"
        android:text="@string/gender_hint"
        app:layout_constraintTop_toBottomOf="@id/dateEditText"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toEndOf="@id/genderTextView"
        app:layout_constraintTop_toBottomOf="@id/dateEditText" />

</android.support.constraint.ConstraintLayout>