<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/promotionCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp"
    android:layout_margin="8dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.androidnetworking.widget.ANImageView
            android:id="@+id/photoPromotionANImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="8dp"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_name"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/photoPromotionANImageView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_description"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/nameTextView"
            app:layout_constraintStart_toEndOf="@id/photoPromotionANImageView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp" />

        <TextView
            android:id="@+id/startDateTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_start_date"
            app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
            app:layout_constraintStart_toEndOf="@id/photoPromotionANImageView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/endingDateTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_ending_date"
            app:layout_constraintTop_toBottomOf="@id/startDateTextView"
            app:layout_constraintStart_toEndOf="@id/photoPromotionANImageView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>