<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/nameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColorHint="@color/colorAccent"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:errorTextAppearance="@style/TextAppearance.Design.Error"
        app:counterOverflowTextAppearance="@style/TextAppearance.Design.Error" >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/nameTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lastNameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTextInputLayout"
        android:textColorHint="@color/colorAccent"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:errorTextAppearance="@style/TextAppearance.Design.Error"
        app:counterOverflowTextAppearance="@style/TextAppearance.Design.Error" >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/lastNameTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_hint"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastNameTextInputLayout"
        android:textColorHint="@color/colorAccent"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/TextAppearance.Design.Error"
        app:counterOverflowTextAppearance="@style/TextAppearance.Design.Error" >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout"
        android:textColorHint="@color/colorAccent"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/TextAppearance.Design.Error"
        app:counterOverflowTextAppearance="@style/TextAppearance.Design.Error" >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/mobilePhoneTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout"
        android:textColorHint="@color/colorAccent"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/TextAppearance.Design.Error"
        app:counterOverflowTextAppearance="@style/TextAppearance.Design.Error" >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/mobilePhoneInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_phone_hint"
            android:inputType="phone" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/addressTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mobilePhoneTextInputLayout"
        android:textColorHint="@color/colorAccent"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/TextAppearance.Design.Error"
        app:counterOverflowTextAppearance="@style/TextAppearance.Design.Error" >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/AddressTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_hint"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/genderTextView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="18sp"
        android:text="@string/gender_hint"
        app:layout_constraintTop_toBottomOf="@id/addressTextInputLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintStart_toEndOf="@id/genderTextView"
        app:layout_constraintTop_toBottomOf="@id/addressTextInputLayout" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/signUpButton"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/genderTextView"
        android:onClick="signUpClick"/>

    <TextView
        android:id="@+id/signInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/signInTextView"
        android:layout_margin="20dp"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/signUpButton"
        android:onClick="goToLoginActivity"/>

    <ProgressBar
        android:id="@+id/signUpProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>